--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <title>Best HR Software 2025 | ATS Pricing Comparison | Free Talent Management Trial</title>
   <meta
     name="description"
