--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <title>Best HR Software 2025 | ATS Pricing Comparison | Free Talent Management Trial</title>
+  <title>Ocio | HR Recruiting Made Easy</title>
   <meta
     name="description"
     content="Compare top HR software pricing. Get free 14-day trial of our AI-powered ATS. Save 40% on recruitment costs. See why 1000+ companies chose us for talent management ROI."
