update: seo changes

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     content="HR software comparison, ATS pricing, best applicant tracking system, talent management ROI, HR software for small business, recruitment software cost, HRIS comparison, HR technology pricing"
   />
   <meta name="robots" content="index, follow, max-image-preview:large" />
-  <link rel="canonical" href="https://yourcompany.com/" />
+  <link rel="canonical" href="https://ocio.live/" />
   <!-- Open Graph Tags -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Best HR Software 2025 | Save 40% on Recruitment Costs | Free Trial" />
   <meta property="og:description" content="Compare pricing of top HR software solutions. Start your free 14-day trial and see ROI in first 30 days. Trusted by 1000+ companies for talent management." />
-  <meta property="og:url" content="https://yourcompany.com/" />
+  <meta property="og:url" content="https://ocio.live/" />
   <meta property="og:site_name" content="Your Company Name" />
-  <meta property="og:image" content="https://yourcompany.com/images/hr-software-pricing-comparison.jpg" />
+  <meta property="og:image" content="https://ocio.live/images/hr-software-pricing-comparison.jpg" />
   <meta property="og:image:alt" content="HR software pricing comparison showing cost savings" />
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Best HR Software 2025 | Save 40% on Recruitment | Free Trial" />
   <meta name="twitter:description" content="Compare top HR software pricing. Free 14-day trial. See ROI in 30 days. Trusted by 1000+ companies." />
-  <meta name="twitter:image" content="https://yourcompany.com/images/hr-software-pricing-comparison.jpg" />
+  <meta name="twitter:image" content="https://ocio.live/images/hr-software-pricing-comparison.jpg" />
   <meta name="twitter:image:alt" content="HR software ROI calculator showing cost savings" />
   <meta name="twitter:site" content="@yourcompany" />
   <meta name="twitter:creator" content="@yourcompany" />
@@ -38,7 +38,7 @@
     "@type": "SoftwareApplication",
     "name": "Your HR Software Platform",
     "description": "All-in-one HR software with ATS, payroll, and talent management. Compare pricing, get free trial, and see ROI in first 30 days.",
-    "url": "https://yourcompany.com",
+    "url": "https://ocio.live",
     "applicationCategory": "BusinessApplication",
     "operatingSystem": "Web"
   }
